# shift-operations-workspace

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CVF_SESSION_MEMORY.md  IMPLEMENTATION_STATUS.json  LICENSE  Makefile  README.md  SECURITY.md  TREEVIEW.md  VALIDATION_REPORT.md  conftest.py  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml
.cvf/: manifest.json  policy.json
.githooks/: pre-commit
.github/workflows/: ci.yml
CVF_SESSION/: ACTIVE_SESSION_STATE.json
SESSION/: ACTIVE_SESSION_STATE.json  SESSION_MEMORY.md
SESSION/handoffs/: AGENT_HANDOFF_2026-07-21.md  AGENT_HANDOFF_2026-07-21_P1A.md  AGENT_HANDOFF_2026-07-22_P2A.md  AGENT_HANDOFF_2026-07-22_P2A_CUSTOMER_REQUEST.md  AGENT_HANDOFF_2026-07-22_P2B_AUTHENTICATION.md  AGENT_HANDOFF_2026-07-22_P2B_AUTHENTICATION_REPAIR_INTAKE.md  AGENT_HANDOFF_2026-07-22_PFIX.md  AGENT_HANDOFF_2026-07-22_PFIX1.md  AGENT_HANDOFF_2026-07-22_PFIX2.md  AGENT_HANDOFF_2026-07-22_PFIX3.md  AGENT_HANDOFF_2026-07-22_PFIX4.md  AGENT_HANDOFF_2026-07-22_PFIX5.md  AGENT_HANDOFF_2026-07-22_PFIX6.md  AGENT_HANDOFF_2026-07-22_PORTABLE_CLONE.md  AGENT_HANDOFF_2026-07-22_POST_BOOTSTRAP.md  (+5 more)
apps/integration-edge/: README.md  (+1 more)
database/: README.md
docs/: CVF_BOOTSTRAP_LOG_2026-07-22.md  INDEX.md  README.md
infrastructure/: README.md
knowledge/: README.md
scripts/: apply_migrations.py  check_file_size.py  check_session_state.py  generate_catalog.py  initialize_cvf_clone.ps1  run_identity_live_governance_evidence.py  seed_dev_users.py
tests/: README.md
(+305 files in other folders)
