[project]
name = "shift-operations-workspace"
version = "0.1.0"
description = "Governed shift operations workspace"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies-note]
# psycopg is only needed to connect to a real PostgreSQL DATABASE_URL; install
# with: pip install "psycopg[binary]>=3.2"

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13"]

[tool.pytest.ini_options]
pythonpath = [
  "apps/workspace-api/src",
  "apps/workspace-worker/src",
  "apps/integration-edge/src",
  "packages/cvf-runtime/src",
  "packages/operations-ledger/src"
]
testpaths = ["tests", "apps"]

[tool.ruff]
line-length = 100
